--- a/Clinica_Proyecto/Clinica/templates/pacientes/paciente_form.html
+++ b/Clinica_Proyecto/Clinica/templates/pacientes/paciente_form.html
@@ -1,26 +1,37 @@
-{% extends "base.html" %}
-{% load static %}
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <h2>Registrar Paciente</h2>
 
 <form method="POST">
-    {% csrf_token %}
+  {% csrf_token %}
 
-    <fieldset>
-        <legend>Datos Generales</legend>
-        {{ form_paciente.as_p }}
-    </fieldset>
+  <fieldset>
+    <legend>Datos Generales</legend>
+    {{ form_paciente.as_p }}
+  </fieldset>
 
-    <fieldset>
-        <legend>Nacionalidades</legend>
-        {{ form_nacionalidad.as_p }}
-    </fieldset>
+  <fieldset>
+    <legend>Nacionalidades</legend>
+    {{ form_nacionalidad.as_p }}
+  </fieldset>
 
-    <fieldset>
-        <legend>Discapacidades</legend>
-        {{ form_discapacidad.as_p }}
-    </fieldset>
+  <fieldset>
+    <legend>Discapacidades</legend>
+    {{ form_discapacidad.as_p }}
+  </fieldset>
 
-    <button type="submit">Guardar</button>
+  <fieldset>
+    <legend>Voluntad Anticipada</legend>
+    {{ form_voluntad.as_p }}
+  </fieldset>
+
+  <fieldset>
+    <legend>Oposición a la Donación de Órganos</legend>
+    {{ form_oposicion.as_p }}
+  </fieldset>
+
+  <button type="submit">Guardar</button>
 </form>
+
+<br />
+<a href="{% url 'paciente_list' %}">⬅ Regresar</a>
 {% endblock %}
