--- a/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_form.html
+++ b/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_form.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}Editar Contacto{% endblock %}
+{% block title %}{{ titulo }}{% endblock %}
 
 {% block content %}
-<h2>Editar Contacto</h2>
+<h2>{{ titulo }}</h2>
 
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="btn">💾 Actualizar</button>
+  <button type="submit" class="btn">💾 Guardar</button>
   <a href="{% url 'contacto_salud_list' %}" class="btn btn-secondary">Cancelar</a>
 </form>
 {% endblock %}
