Plantillas de contacto, Con vistas de contacto de salud, junto con css

--- a/Clinica_Proyecto/Clinica/static/css/style.css
+++ b/Clinica_Proyecto/Clinica/static/css/style.css
@@ -15,4 +15,6 @@
 /* === COMPONENTES === */
 @import url("buttons.css");
 @import url("_forms.css");
+@import url('contacto_salud.css');
+
 /* (supongo que es 'form.css', puedes renombrarlo) */
