--- a/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_details.html
+++ b/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_details.html
@@ -2,18 +2,25 @@
 {% block title %}Detalle del Contacto{% endblock %}
 
 {% block content %}
-<h2>Detalle del Contacto</h2>
+<div class="contacto-container">
+  <h2>Detalle del contacto</h2>
 
-<div class="card">
-  <p><strong>Paciente:</strong> {{ contacto.paciente_UUID }}</p>
-  <p><strong>Entidad Prestadora:</strong> {{ contacto.codigo_entidad_prestadora }}</p>
-  <p><strong>Fecha Inicio Atención:</strong> {{ contacto.fecha_hora_inicio_atencion }}</p>
-  <p><strong>Grupo de Servicios:</strong> {{ contacto.get_grupo_servicios_display }}</p>
-  <p><strong>Entorno de Atención:</strong> {{ contacto.get_entorno_atencion_display }}</p>
-  <p><strong>Clasificación Triage:</strong> {{ contacto.get_clasificacion_triage_display }}</p>
-  <p><strong>Diagnóstico:</strong> {{ contacto.codigo_diagnostico }}</p>
-  <p><strong>Tipo de Diagnóstico:</strong> {{ contacto.get_tipo_diagnostico_display }}</p>
+  <ul class="detalle">
+    <li><strong>Fecha Inicio Atención:</strong> {{ contacto.fecha_hora_inicio_atencion|date:"d/m/Y H:i" }}</li>
+    <li><strong>Entidad Prestadora:</strong> {{ contacto.codigo_entidad_prestadora }}</li>
+    <li><strong>Modalidad:</strong> {{ contacto.codigo_modalidad_realizacion_tecnologia_salud }}</li>
+    <li><strong>Grupo Servicios:</strong> {{ contacto.get_grupo_servicios_display }}</li>
+    <li><strong>Entorno Atención:</strong> {{ contacto.get_entorno_atencion_display }}</li>
+    <li><strong>Causa/Motivo Atención:</strong> {{ contacto.codigo_causa_motivo_atencion }}</li>
+    <li><strong>Clasificación Triage:</strong> {{ contacto.get_clasificacion_triage_display }}</li>
+    <li><strong>Diagnóstico:</strong> {{ contacto.codigo_diagnostico }}</li>
+    <li><strong>Tipo Diagnóstico:</strong> {{ contacto.get_tipo_diagnostico_display }}</li>
+  </ul>
+
+  <div class="contacto-details">
+    <a href="{% url 'contacto_salud_edit' id_paciente=paciente.paciente_UUID id_contacto=contacto.id_contacto_UUID %}" class="btn btn-warning">✏️ Editar</a>
+    <a href="{% url 'contacto_salud_delete' id_paciente=paciente.paciente_UUID id_contacto=contacto.id_contacto_UUID %}" class="btn btn-danger">🗑️ Eliminar</a>
+    <a href="{% url 'contacto_salud_list' id_paciente=paciente.paciente_UUID %}" class="btn btn-secondary">⬅️ Volver</a>
+  </div>
 </div>
-
-<a href="{% url 'contacto_salud_list' %}" class="btn">⬅ Volver al listado</a>
 {% endblock %}
