--- a/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_edit.html
+++ b/Clinica_Proyecto/Clinica/templates/contacto_salud/contacto_salud_edit.html
@@ -2,12 +2,16 @@
 {% block title %}Editar Contacto{% endblock %}
 
 {% block content %}
-<h2>Editar Contacto</h2>
+<div class="card">
+  <h2>{{ titulo }}</h2>
 
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn">💾 Actualizar</button>
-  <a href="{% url 'contacto_salud_list' %}" class="btn btn-secondary">Cancelar</a>
-</form>
+  <form method="post" class="formulario">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div class="form-actions">
+      <button type="submit" class="btn btn-success">💾 Actualizar</button>
+      <a href="{% url 'contacto_salud_list' id_paciente=paciente.paciente_UUID %}" class="btn btn-secondary">Cancelar</a>
+    </div>
+  </form>
+</div>
 {% endblock %}
