--- a/Clinica_Proyecto/Clinica/templates/index.html
+++ b/Clinica_Proyecto/Clinica/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Hola Principito</h1>
+<h1>Clinica PAJD</h1>
+<p>Bienvenido a la Clínica PAJD, su salud es nuestra prioridad.</p>
+<a href="#">Apruébenos Porfi</a>
 {% endblock %}
